<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.uca.oftapp.MainActivity">
    <item
        android:id="@+id/action_comite"
        android:orderInCategory="1"
        android:title="@string/comite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_programa"
        android:orderInCategory="2"
        android:title="@string/programa"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fechas"
        android:orderInCategory="3"
        android:title="@string/fechas"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_localizacion"
        android:orderInCategory="4"
        android:title="@string/localizacion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_inicio"
        android:orderInCategory="5"
        android:title="@string/inicio"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />
</menu>



