<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:background="@color/colorAzulito"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LayPrograma"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAzulito"
        android:isScrollContainer="false"
        android:orientation="vertical"
        tools:context="es.uca.oftapp.ProgramaActivity">

        <TextView
            android:id="@+id/txtTitPrograma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_titulo_programa"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtDia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dia1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDia1Hora1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora1dia1"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia1Ev1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora1dia1Ev"
            android:textColor="@color/colorAzulito" />

        <TextView
            android:id="@+id/txtDia1Hora2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/hora2"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtDia1Hora3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora3dia1"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia1Ev3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora3dia1Ev"
            android:textColor="@color/colorAzulito" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtDia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dia2"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDia2Hora1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora1dia2"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia2Ev1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora1dia2Ev"
            android:textColor="@color/colorAzulito" />

        <TextView
            android:id="@+id/txtDia2Hora2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/hora2"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtDia2Hora3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora3dia2"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia2Ev3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora3dia2Ev"
            android:textColor="@color/colorAzulito" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/txtDia3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/dia3"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDia3Hora1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora1dia3"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia3Ev1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora1dia3Ev"
            android:textColor="@color/colorAzulito" />

        <TextView
            android:id="@+id/txtDia3Hora2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/hora2"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtDia3Hora3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/hora3dia3"
            android:textColor="@android:color/background_light" />

        <TextView
            android:id="@+id/txtDia3Ev3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/background_light"
            android:text="@string/hora3dia3Ev"
            android:textColor="@color/colorAzulito" />

    </LinearLayout>

</ScrollView>
