<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:background="@color/colorAzulito"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LayPrograma"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAzulito"
        android:isScrollContainer="false"
        android:orientation="vertical"
        tools:context="es.uca.oftapp.ComiteActivity">

        <TextView
            android:id="@+id/txtTitPrograma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/txt_titulo_comite"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/chk1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/txtChk"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LayBuscador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edTxt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txtEdit"
                android:ems="10"
                android:inputType="number" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtBtn" />

        </LinearLayout>


        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />


    </LinearLayout>

</ScrollView>